style : fix dark mode heading user profile page

--- a/src/pages/pages-css/user.css
+++ b/src/pages/pages-css/user.css
@@ -4,7 +4,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 5rem;
 }
 
 .profile-details li {
